end slide liege

--- a/talks/20181112_ecdotica_digitale.html
+++ b/talks/20181112_ecdotica_digitale.html
@@ -66,6 +66,8 @@
 						<br/>Université de Liège, 12-13 novembre 2018</span>
 						<br/><br/>
 						Elena Spadini (Université de Lausanne)
+						<br/>
+						<div style="font-size: 0.8em">[slides: <a href="http://elespdn.github.io/talks/20181112_ecdotica_digitale.html">elespdn.github.io/talks/20181112_ecdotica_digitale</a>]</div>
 					</div>
 				</section>
 
@@ -139,8 +141,8 @@
 					<div style="background-color: #E6E6E6" class="source">Silva, Georgette, and Harold Love. 1969. “The Identification of Text Variants by Computer.” <i>Information Storage and Retrieval</i> 5 (3): 89–108.</div>
 				</section>
 
-				<section data-background-iframe="https://dhhumanist.org/Archives/Virginia/v04/1240.html" data-bacground-opacity="0.5">
-					<div style="background-color: white">
+				<section>
+					<div>
 						<br/>
 						<span style="background-color: #E6E6E6">Robinson, Peter. <i>Collate</i></span>
 						<br/><br/>
@@ -149,7 +151,7 @@
 							<li>fuzzy match</li>
 						</ul>
 						<br/><br/>
-						<div class="source">annunciato nella lista di diffusione Humanist
+						<div class="source">1991, annunciato nella lista di diffusione <i>Humanist</i>
 							<br/>(<a href="https://dhhumanist.org/Archives/Virginia/v04/1240.html" target="_blank">dhhumanist.org/Archives/Virginia/v04/1240.html</a>)</div>
 						<div class="source">Robinson, P. M. W. 1989. “The Collation and Textual Criticism of Icelandic <br/>Manuscripts (1): Collation.” <i>Literary and Linguistic Computing</i> 4 (2): 99–105.</div>
 					</div>
@@ -211,18 +213,21 @@
 						<li><b>usando risorse NLP</b></li>
 						<li><b>per identificare categorie di varianti: di forma e di sostanza.</b></li>
 					</ul>
+				
 				</section>
 
-				<section>
-					<h3>CONCLUSIONI</h3>
-					<br/><br/>
-					Normalizzazione
-					<br/><br/>
-					<ul>
-						<li>per ottenere un allineamento corretto</li>
-						<li><b>usando risorse NLP <span style="color:red">... quali?</span></b></li>
-						<li><b>per identificare categorie di varianti: di forma, di sostanza <span style="color:green">e altre ancora ...</span></b></li>
-					</ul>
+				<section data-background-image="images/20181112_ecdotica_digitale/pipeline.png" data-background-opacity="0.8">
+					<div style="background-color: white;padding:30px">
+						<h3>CONCLUSIONI</h3>
+						<br/><br/>
+						Normalizzazione
+						<br/><br/>
+						<ul>
+							<li>per ottenere un allineamento corretto</li>
+							<li><b>usando risorse NLP <span style="color:red">... quali?</span></b></li>
+							<li><b>per identificare categorie di varianti: di forma, di sostanza <span style="color:green">e altre ancora ...</span></b></li>
+						</ul>
+					</div>
 				</section>
 
 				<section>
