--- a/talks/20181025UNIL_master_genetique.html
+++ b/talks/20181025UNIL_master_genetique.html
@@ -64,7 +64,7 @@
 					<br/>
 					Projet « Gustave Roud, <i>Œuvres compl&#232;tes</i> » - Elena Spadini
 					<br/><br/>
-					<span style="text-decoration: underline; text-decoration-color: yellow">En ligne: <i>http://small.cat/fog</i></span></div>
+					<span style="text-decoration: underline; text-decoration-color: yellow">En ligne: <a href="https://elespdn.github.io/talks/20181025UNIL_master_genetique.html#/">elespdn.github.io/talks/20181025UNIL_master_genetique</a></span></div>
 				</section>
 
 
