--- a/talks/20181127_editions_critiques_numeriques.html
+++ b/talks/20181127_editions_critiques_numeriques.html
@@ -27,7 +27,7 @@
 							
 				
 				<section>
-					<h2>&#233;ditions critiques, RDF et Gustave Roud</h2>
+					<h2>&#233;ditions critiques, <i>RDF</i><br/> et Gustave Roud</h2>
 					<br/>
 					<p>Publication numérique (Isaac Pante)<br/>UNIL, 27.11.2018</p>
 				</section>
