update monaci slides

--- a/talks/20181219_ErnestoMonaci.html
+++ b/talks/20181219_ErnestoMonaci.html
@@ -66,12 +66,15 @@
 
 				<!-- Monaci fu, infatti,in contatto con i maggiori  scienziati e savants dell’Italia (D’Ancona, Rajna, Ascoli, Canello,Ovidio,Zambrini, ecc.) e dell’Europa del suo tempo (i francesi Meyer e Paris, Thomas, Morel-Fatio, i tedeschi Stengel, Bartsch, Foerster,Meyer Lübke, il “viennese” Mussafiae tantissimi altri).  -->
 				<!-- INTRO archivio, e in particolare corrispondenze !!!! MAP !!!!! -->
+				<!-- D'Ancona, Pisa; Rajna, Firenze; Ascoli, Milano; Canello, Padova; D'Ovidio, Napoli; Zambrini, Bologna; Meyer, Parigi; Morel-Fatio, Parigi; Paris, Parigi; Bartsh, Heidelberg; Foerster, Bonn; Mussafia, Vienna -->
+				
+
+								<!-- Ci siamo concentrati su alcune lettere degli anni 70-75, periodo straordinario! -->
 				<section>
-					<img src="???">
+					Anni '70
+					<br/><br/><br/>
+					Ogni studente: due lettere <br/>tratte dalle corrispondenze con Rajna, Mussafia, Meyer
 				</section>
-
-				<!-- Ci siamo concentrati su alcune lettere degli anni 70-75, periodo straordinario! -->
-
 
 				<!-- INTRO riviste. !!!! TIMELINE !!!! -->
 				<section>
@@ -105,9 +108,11 @@
 				<!-- difficoltà dell'insegnamento 18730123_rajna_monaci   ATTENZIONE, NON PUÒ ESSERE DI RAJNA-->
 				<!-- preparazione Crestomazia 18740612_monaci_meyer -->
 				<section>
-					<div class="quote">Capisco bene le tue peritanze. Sono passato anch'io attraverso a cotesto stato d'animo, e so quanto riesca penoso. [...] <b>Ti dà pensiero il non aver fatto un corso regolare sulle materie che devi insegnare? Ricordati che tutti coloro che in Italia si sono dati al neolatinismo si trovano nella stessa condizione.</b> Non dirò che sia propriamente il meglio, ma certo insieme al danno di una talquale incertezza, ci è il vantaggio grandissimo di chiudere le porte ad ogni pregiudizio, ad ogni ombra di routine. Ciascuno è costretto a cercarsi da sé la sua via; e siccome poi gli ajuti non mancano, e a un dipresso quello che si fa negli altri paesi si sa o si può sapere, con qualche pericolo di parziali deviamenti, si finisce pur sempre per raggiungere la meta.</div>
+					<div class="quote">Capisco bene le tue peritanze. Sono passato anch'io attraverso a cotesto stato d'animo, e so quanto riesca penoso. [...] <b>Ti dà pensiero il non aver fatto un corso regolare sulle materie che devi insegnare? Ricordati che tutti coloro che in Italia si sono dati al neolatinismo si trovano nella stessa condizione. Non dirò che sia propriamente il meglio, ma certo insieme al danno di una talquale incertezza, ci è il vantaggio grandissimo di chiudere le porte ad ogni pregiudizio, ad ogni ombra di routine. Ciascuno è costretto a cercarsi da sé la sua via;</b> e siccome poi gli ajuti non mancano, e a un dipresso quello che si fa negli altri paesi si sa o si può sapere, con qualche pericolo di parziali deviamenti, si finisce pur sempre per raggiungere la meta.</div>
 					<div class="source">Rajna a Monaci, 23 gennaio 1873</div>
-					<br/><br/>
+				</section>
+
+				<section>
 					<div class="quote">La ringrazio vivamente per il bel volume di Antichi Testi del cui dono Ella ha voluto onorarmi. <b>Io che sto preparando una simile raccolta per l'italiano</b> sono lieto di trovare in esso un modello che cercherò di seguire con ogni mio potere, sebbene certo di non raggiungerne i pregi.</div>
 					<div class="source">Monaci a Meyer, 12 giugno 1874</div>
 				</section>
