--- a/io/index.html
+++ b/io/index.html
@@ -296,7 +296,7 @@
                                   
                     <li>
                         <div id="boccaccio">
-                            <p><span class="ongoingtitle">La <i>Commedia</i> di Boccaccio</span>. <a href="http://boccacciocommedia.it/" target="_blank"><i>La </i>Commedia<i> di Boccaccio</i></a> is an ongoing project carried on with Sonia Tempestini, investigating the <i>varia lectio</i> of the three manuscripts of the <i>Divina Commedia</i> copied by Giovanni Boccaccio. Read about the project in a post at <a href="http://fontegaia.hypotheses.org/1877" target="_blank">FontegaiaBlog</a> or <a href="http://boccacciocommedia.it/" target="_blank">visit the website</a>.</p>
+                            <p><span class="ongoingtitle">La <i>Commedia</i> di Boccaccio</span>. <a href="https://boccacciocommedia.unil.ch/" target="_blank"><i>La </i>Commedia<i> di Boccaccio</i></a> is an ongoing project carried on with Sonia Tempestini, investigating the <i>varia lectio</i> of the three manuscripts of the <i>Divina Commedia</i> copied by Giovanni Boccaccio. Read about the project in a post at <a href="http://fontegaia.hypotheses.org/1877" target="_blank">FontegaiaBlog</a> or <a href="https://boccacciocommedia.unil.ch/" target="_blank">visit the website</a>.</p>
                         </div><!-- /.boccaccio -->
                     </li>
 
