added lincese info to publicationWeb presentation

--- a/talks/20190109_webPub.html
+++ b/talks/20190109_webPub.html
@@ -805,6 +805,7 @@ inline générique : texte &lt;span&gt;texte spécial&lt;/span&gt; texte
 							<li><a href="https://creativecommons.org/" target="_blank">Creative Commons</a></li>
 							<li><a href="https://opendatacommons.org/" target="_blank">Open Data Commons</a></li>
 							<li><a href="http://www.dcc.ac.uk/sites/default/files/documents/publications/reports/guides/How_To_License_Research_Data.pdf" target="_blank">How to License Research Data</a></li>
+							<li><a href="https://opensource.guide/legal/" target="_blank">The legal side of open source (for code mainly)</a></li>
 							<li><a href="https://fr.wikipedia.org/wiki/Licence_Creative_Commons" target="_blank">Licence Creative Commons (page Wikipedia français)</a></li>
 						</ul>
 					</div>
