--- a/io/index.html
+++ b/io/index.html
@@ -104,11 +104,11 @@
                             <li><h3 class="pubtitle">Articles</h3>
                                 <ul style="list-style-type:none">   
 
-                                    <li>Spadini, E. "Exercises in modelling: textual variants". <i>International Journal of Digital Humanities</i> [forthcoming Issue 1, 2019].</li>
+                                    <li><p>Spadini, E. "Exercises in modelling: textual variants". <i>International Journal of Digital Humanities</i> [forthcoming Issue 1, 2019].</p></li>
 
                                     <li><p>Spadini, E. &amp; Magdalena Turska, "XML/TEI Stand-off Markup. One step beyond". <i>Digital Philology: A Journal of Medieval Cultures</i> [forthcoming Issue 8, 2019].</p></li>
 
-                                    <li>Spadini, E. &amp; Sonia Tempestini. "Querying Variants: Boccaccio’s ‘Commedia’ and Data-Models". <i>Digital Medievalists</i> [accepted - forthcoming].</li>
+                                    <li><p>Spadini, E. &amp; Sonia Tempestini. "Querying Variants: Boccaccio’s ‘Commedia’ and Data-Models". <i>Digital Medievalists</i> [accepted - forthcoming].</p></li>
 
                                     <li><p>Spadini, E., Wout Diller &amp; Monica Zanardo. "Il Lexicon of Scholarly Editing: una bussola nella Babele delle tradizioni filologiche". <i>Ecdotica</i> 13 (2016). [<a href="http://elespdn.github.io/publications/ecdotica13.pdf" target="_blank">pdf</a>]</p></li>
                                     
