--- a/io/index.html
+++ b/io/index.html
@@ -244,8 +244,10 @@
             <div id="community" class="myblock">
                 <h2><a style="" href="index.html">&#11180;</a>&nbsp;&nbsp;<b>Community</b></h2>
                 <ul style="list-style-type:none">
-                    <li>
-                        <p><a href="http://eadh.org/">EADH</a> Executive Committee officer (2017-2020).</p></li>
+                   <li>
+                        <p>Workshop on Scholarly Digital Editions, Graph Data-Models and Semantic Web Technologies (<a href="https://wp.unil.ch/graphsde/" target="_blank">#graphSDE2019</a>), Lausanne 3-4 June 2019. Co-chair.</p></li>
+                   <li>
+                        <p>European Association for Digital Humanities (<a href="http://eadh.org/">EADH</a>) Executive Committee officer (2017-2020).</p></li>
                     <li>
                         <p>Program committee member. <i><a href="http://wp.unil.ch/llist/event/comhum2018/" target="_blank">Workshop on Computational Methods in the Humanities 2018 (COMHUM 2018)</a></i>. Lausanne, 4-5 juin 2018.
                     <li>
