--- a/talks/20171011_editions_numeriques.html
+++ b/talks/20171011_editions_numeriques.html
@@ -6,7 +6,7 @@
 
 		<title>Éditions num&#233;riques</title>
 
-		<link rel="stylesheet" href="reveal/reveal/css/reveal.css">
+		<link rel="stylesheet" href="reveal/css/reveal.css">
 		<link rel="stylesheet" href="reveal/css/theme/white.css">
 
 		<!-- Theme used for syntax highlighting of code -->
