reorganize and exercises

--- a/talks/20190425_TEIcustomization/slides/TEIcustomizationSlides-rpubs.html
+++ b/talks/20190425_TEIcustomization/slides/TEIcustomizationSlides-rpubs.html
@@ -956,6 +956,10 @@ Have you met them before? <br/>Yes, they are available in <strong>oXygen</strong
 
 <p>What happens if you change the schema?</p>
 
+<p>Exercise:</p>
+
+<p>take the last TEI document you worked with yesterday or download from the materials folder (available from the course homepage) and change the schema from &#39;tei_all&#39; to &#39;tei_lite&#39;. Is the green square still green?</p>
+
 </div>
 
 </section>
