reorganize and exercises

--- a/talks/20190425_TEIcustomization_sources/slides/TEIcustomizationSlides-rpubs.html
+++ b/talks/20190425_TEIcustomization_sources/slides/TEIcustomizationSlides-rpubs.html
@@ -764,7 +764,7 @@ hljs.initHighlightingOnLoad();
 <li>TEI Customization</li>
 <li>ODD (One Document Does it all)</li>
 <li>TEI bricks</li>
-<li>Customiting the TEI</li>
+<li>Customizing the TEI</li>
 </ul>
 
 </div>
@@ -1161,7 +1161,7 @@ Exercise time</p>
 
 <ul>
 <li>manually writing it</li>
-<li>using web app <a href="http://www.tei-c.org/Roma/">Roma</a></li>
+<li>using web app <a href="https://roma2.tei-c.org/">Roma</a></li>
 </ul>
 
 
@@ -1182,7 +1182,7 @@ Exercise time</p>
 
 <ul>
 <li>manually writing it</li>
-<li>using <a href="http://www.tei-c.org/Roma/">Roma</a></li>
+<li>using <a href="https://roma2.tei-c.org/">Roma</a></li>
 </ul>
 
 
@@ -1196,9 +1196,9 @@ Exercise time</p>
 <p>(ODD &mdash;&gt; RNG, RNC, DTD, etc.)</p>
 
 <ul>
-<li>web app  <a href="http://www.tei-c.org/Roma/">Roma</a></li>
+<li>web app  <a href="https://roma2.tei-c.org/">Roma</a></li>
 <li>oXygen&#39;s built-in stylesheets</li>
-<li>Oxford University&#39;s <a href="http://oxgarage.oucs.ox.ac.uk:8080/ege-webclient/">OxGarage</a> multi-transformer</li>
+<li>Oxford University&#39;s <a href="https://oxgarage2.tei-c.org/">OxGarage</a> multi-transformer</li>
 <li>roma: a command-line tool</li>
 <li>Complete list with links and instructions at WWP <a href="http://www.wwp.northeastern.edu/outreach/seminars/_current/presentations/customization/customization_overview_tutorial_13.xhtml">ODD Processors page</a></li>
 </ul>
@@ -1271,7 +1271,7 @@ Exercise time</p>
 <li><p>the TEI-C resources, and in particular</p>
 
 <ul>
-<li><a href="http://www.tei-c.org/Guidelines/Customization/odds.xml">http://www.tei-c.org/Guidelines/Customization/odds.xml</a></li>
+<li><a href="http://www.tei-c.org/Guidelines/Customization">http://www.tei-c.org/Guidelines/Customization</a></li>
 </ul></li>
 <li><p>the Women Writers Project educational resources, and in particular</p>
 
@@ -1279,7 +1279,7 @@ Exercise time</p>
 <li><a href="http://www.wwp.northeastern.edu/outreach/resources/customization.html">http://www.wwp.northeastern.edu/outreach/resources/customization.html</a></li>
 </ul>
 
-<p>Please visit these links if you want to know more!
+<p>Please visit these links if you want to know more.
 </small></p></li>
 </ul>
 
