--- a/talks/20190502_Lille/20190502_Lille.html
+++ b/talks/20190502_Lille/20190502_Lille.html
@@ -34,6 +34,9 @@
 			.small {
 				font-size: 0.8em;
 			}
+			.smallest {
+				font-size: 0.5em;
+			}
 			section {
 				text-align: left
 			} 
@@ -49,9 +52,11 @@
 				<section style="text-align: center">
 					<h3>« Une allée de rosiers et de digitales fleuries » : parcours dans l’édition des œuvres de Gustave Roud</h3>
 					<br/>
-					<p style="background-color: #A9A9A9;padding:30px;color:black" class="smaller"><em>EDITIONS SAVANTES NUMERIQUES : ENJEUX ET REALISATIONS</em>. SEMINAIRE INTERDISCIPLINAIRE-EUROPEEN ET INTERNATIONAL DE l’ECOLE DOCTORALE.<br/>LILLE, 2 MAI 2019</p>
-					<p class="smaller">Daniel Maggetti et Elena Spadini, Université de Lausanne
-						<br/>(slides <a href="https://elespdn.github.io/talks/20190502_Lille/20190502_Lille.html">elespdn.github.io/talks/20190502_Lille/20190502_Lille.html</a>)</p>
+					<div style="background-color: #A9A9A9;padding:30px;color:black" class="smallest">
+						<em>EDITIONS SAVANTES NUMERIQUES : ENJEUX ET REALISATIONS</em>. SEMINAIRE INTERDISCIPLINAIRE-EUROPEEN ET INTERNATIONAL DE l’ECOLE DOCTORALE.<br/>LILLE, 2 MAI 2019
+						<br/>Daniel Maggetti et Elena Spadini, Université de Lausanne
+						<br/>(slides <a style="color:inherit;text-decoration: underline;text-decoration-color: gold" href="https://elespdn.github.io/talks/20190502_Lille/20190502_Lille.html">elespdn.github.io/talks/20190502_Lille/20190502_Lille.html</a>)
+					</div>
 				</section>
 
 
@@ -413,8 +418,8 @@
 
 
 				<section>
-					Elena Spadini, XXX
-					<br/>CC-BY-NC-SA
+					<span class="small">
+					Elena Spadini, <em>« Une allée de rosiers et de digitales fleuries » : parcours dans l’édition des œuvres de Gustave Roud</em>, "Éditions savantes numériques : enjeux et realisations" Seminaire interdisciplinaire-europeen et international de l'école doctorale, Lille, 2 mai 2019.</span><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/80x15.png" /></a>
 				</section>
 
 
