--- a/talks/20190502_Lille/20190502_Lille.html
+++ b/talks/20190502_Lille/20190502_Lille.html
@@ -424,7 +424,7 @@
 					</div>
 				</section>
 
-				<section data-background-image="images/database.jpg" data-background-opacity="0.4">
+				<section data-background-image="images/database_nb.jpg" data-background-opacity="0.5">
 					<h4>Questions ?</h4>
 					<br/><br/><br/><br/><br/><br/><br/><br/>
 
