piccole modifiche lille

--- a/talks/20190502_Lille/20190502_Lille.html
+++ b/talks/20190502_Lille/20190502_Lille.html
@@ -63,7 +63,7 @@
 				<section>
 					Table de matières
 					<br/><br/>
-					<ol>
+					<ol style="font-size: 0.9em">
 						<li>PROJET : Gustave Roud, « Œuvres complètes »</li>
 						<li>FOCUS : édition numérique</li>
 						<li>CAS D'ETUDE : génèse</li>
@@ -245,7 +245,7 @@
 									bibliographie<br/>
 									personnes<br/>
 									lieux<br/>
-									event biographique<br/>
+									élément biographique<br/>
 									photos
 								</div>
 							</td>
@@ -284,8 +284,8 @@
 				<section data-background-image="images/roud_materiali_fr.png" data-background-size="contain">
 				</section>
 
-				<section>
-					<h4>Exemple. <em>Air de la solitude</em></h4>
+				<section data-background-iframe="../materials/20180524_cuso_recueil/AirSolitude_barchart/piechart_saisons.png" data-background-size="contain" data-background-interactive>
+					<h4 style="text-align: right">Exemple.<br/><em>Air de la solitude</em></h4>
 				</section>
 
 				<section data-background-iframe="../materials/20180524_cuso_recueil/AirSolitude_barchart/barchart_mots.html" data-background-size="contain" data-background-interactive>
@@ -424,12 +424,12 @@
 					</div>
 				</section>
 
-				<section data-background-image="images/database_nb.jpg" data-background-opacity="0.5">
+				<section data-background-image="images/database_nb.jpg" data-background-opacity="0.2">
 					<h4>Questions ?</h4>
 					<br/><br/><br/><br/><br/><br/><br/><br/>
 
 					<div style="font-size: 0.4em;padding-right: 50%">
-					Spadini, Elena. <em>« Une allée de rosiers et de digitales fleuries » : parcours dans l’édition des œuvres de Gustave Roud</em>. Éditions savantes numériques : enjeux et realisations - Séminaire interdisciplinaire-européen et international de l'école doctorale, Lille, 2 mai 2019.<br/></span><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/80x15.png" /></a></div>
+					Spadini, Elena. <em>« Une allée de rosiers et de digitales fleuries » : parcours dans l’édition des œuvres de Gustave Roud</em>. Éditions savantes numériques : enjeux et réalisations - Séminaire interdisciplinaire-européen et international de l'école doctorale, Lille, 2 mai 2019.<br/></span><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/80x15.png" /></a></div>
 
 					<div style="text-align: right" class="smallest"><span class="smallest">Image : Michael Mandiberg, <a href="https://www.flickr.com/photos/theredproject/3332644561/" target="_blank"><em>DATA BASE</em></a>, 2009 (CC BY-SA 2.0)</span></div>
 					
