--- a/talks/20190524_seminaireGenetique/20190524_seminaireGenetique_white.html
+++ b/talks/20190524_seminaireGenetique/20190524_seminaireGenetique_white.html
@@ -7,7 +7,7 @@
 		<title>UNIL 2019</title>
 
 		<link rel="stylesheet" href="../reveal/css/reveal.css">
-		<link rel="stylesheet" href="../reveal/css/theme/night.css">
+		<link rel="stylesheet" href="../reveal/css/theme/white.css">
 
 		<!-- Theme used for syntax highlighting of code -->
 		<link rel="stylesheet" href="../reveal/lib/css/zenburn.css">
