--- a/talks/20190524_seminaireGenetique/20190524_seminaireGenetique.html
+++ b/talks/20190524_seminaireGenetique/20190524_seminaireGenetique.html
@@ -315,7 +315,7 @@ MLA Statement on the Scholarly<br/>Edition in the Digital Age</a></li>
 				</section>
 
 				<section>
-					<h4><span style="color:#E5C100">roud-œuvres:pubReusedIn</span></h4>
+					<h4><span style="color:#E5C100">roud-œuvres:publicationReusedIn</span></h4>
 					<br/>
 					<table>
 						<tr>
