continuation slides genetique

--- a/talks/20190524_seminaireGenetique/20190524_seminaireGenetique.html
+++ b/talks/20190524_seminaireGenetique/20190524_seminaireGenetique.html
@@ -84,7 +84,7 @@
 					<ol class="small">
 						<li>Éditions génétiques</li>
 						<li>Gustave Roud, pratiques d'écriture</li>
-						<li>Vers une ontologie des relations génétiques</li>
+						<li>Vers une modélisation des relations génétiques</li>
 					</ol>
 				</section>
 
@@ -292,7 +292,13 @@ MLA Statement on the Scholarly<br/>Edition in the Digital Age</a></li></ul></div
  -->
 
 				<section data-background-color="#003333">
-					<h3>3. Vers une modelisation<br/>des relations génétiques</h3>
+					<h3>3. Vers une modélisation<br/>des relations génétiques</h3>
+				</section>
+
+				<section>
+					<h4>Modélisation</h4>
+					<br/><br/><br/>
+					<div class="small">Formalisation explicite et coherente<br/>de notre comprehension et interpretation des données.</div>
 				</section>
 
 				<section>
@@ -307,9 +313,15 @@ MLA Statement on the Scholarly<br/>Edition in the Digital Age</a></li></ul></div
 				</section>
 
 				<section>
-					<h4>Ontologie<br/>(web semantique)</h4>
+					<div class="quote">	&ldquo; Ce qui est sans doute à retenir de cette experience [avec le logiciel <i>Storyspace</i>] [...] c'est la nécessité de <i>nommer</i> les liens et de prévoir des carrefours de liens &bdquo;</div>
 					<br/><br/>
-					<i>sujet &emsp;&emsp;&emsp;&emsp;&emsp; -----prédicat---> &emsp;&emsp;&emsp;&emsp;&emsp; objet</i>
+					<div class="source" style="width: 60%;float: right;"><span class="small">Daniel Ferrer, « La représentation hypertextuelle des manuscrits. Quelques leçons de douze années d'expériences », <i>L'Edition du manuscrit. De l'archive de création au scriptorium numérique</i>, éd. A. Crasson, 2008</span></div>
+				</section>
+
+				<section>
+					<h4>Ontologie<br/>(web semantique)<br/><br/>Triplet RDF</h4>
+					<br/><br/>
+					<span class="fragment"><i>sujet &emsp;&emsp;&emsp;&emsp;&emsp; -----prédicat---> &emsp;&emsp;&emsp;&emsp;&emsp; objet</i></span>
 					<br/><br/>
 					<span class="fragment"><i>classe &emsp;&emsp;&emsp; -----propriété---> &emsp;&emsp;&emsp; classe / literal</i></span>
 					
